--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,3 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-  position: relative;
-  z-index: 1;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
@@ -44,20 +22,29 @@
 }
 
 .animated-grid {
-  position: absolute;
-  inset: 0;
+  width: 100%;
+  height: 100%;
+  background-image: 
+    linear-gradient(to right, rgba(255, 165, 0, 0.1) 1px, transparent 1px),
+    linear-gradient(to bottom, rgba(255, 165, 0, 0.1) 1px, transparent 1px);
   background-size: 50px 50px;
-  background-image:
-    linear-gradient(to right, rgba(255, 255, 255, 0.2) 1px, transparent 1px),
-    linear-gradient(to bottom, rgba(255, 255, 255, 0.2) 1px, transparent 1px);
-  animation: moveGrid 3s linear infinite;
 }
 
-@keyframes moveGrid {
+@keyframes gridAnimation {
   0% {
-    background-position: 0 0;
+    opacity: 0;
+    background-size: 100px 100px;
+  }
+  50% {
+    opacity: 1;
+    background-size: 50px 50px;
   }
   100% {
-    background-position: 50px 50px;
+    opacity: 0;
+    background-size: 25px 25px;
   }
+}
+
+.animated-grid {
+  animation: gridAnimation 1s ease-in-out;
 }
